Fixed Footer and Header not stretching
Issue was caused by max-width: 1920px in root.
I moved this property to the main tag so it will only affect content.
Applied the main tag to pages.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
 #root {
-  max-width: 1920px;
   text-align: center;
 }
