--- a/src/components/header.css
+++ b/src/components/header.css
@@ -2,20 +2,18 @@
 
 header {
     color: white;
-    width: 100%;
+    height: 70px;
     background: hsla(307, 93%, 84%, 1);
     background: linear-gradient(90deg, hsl(259, 36%, 52%) 0%, hsla(256, 96%, 44%, 1) 100%);
     background: linear-gradient(to right, hsl(259, 36%, 52%), #491eaf);
     filter: drop-shadow(0 0 1em #b9a6a6);
     padding: 1em 1em 0em 1em;
     font-size: 0.6em;
-    text-align: left;
     margin-bottom: 4em;
-    width: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: sticky;
+    justify-self: center;
 
 }
 
